--- a/domain.yml
+++ b/domain.yml
@@ -1,13 +1,19 @@
 intents:
   - greet
+  - pizza_list
+  - pizza_chosen
+  -
   - goodbye
   - affirm
   - deny
   - mood_great
   - mood_unhappy
   - bot_challenge
-  - 
+  - product_add
 
+entities:
+  - food_product
+  
 actions:
 - utter_greet
 - utter_cheer_up
@@ -16,19 +22,17 @@ actions:
 - utter_goodbye
 - utter_iamabot
 - product_add
-- product_delete
-- product_swap
-- product_change_amount
-- order_start
-- order_check
-- order_confirm
-- order_confirm_affirm
-- order_confirm_deny
-- utter_order_initiate
 
 templates:
   utter_greet:
-  - text: "Hey! What would you like to order?"
+  - text: "Hi there! What would you like to order?"
+
+  utter_pizza_list:
+  - text: "We offer the following kind of pizzas: 
+  Hawaii, Margharita, Salami, Vegeterian and Mushroom"
+  
+  utter_ask_more:
+  - text: "Would you like anything else?"
 
   utter_cheer_up:
   - text: "Here is something to cheer you up:"
@@ -45,6 +49,6 @@ templates:
 
   utter_iamabot:
   - text: "I am a bot, powered by Rasa."
-  
-  product_add: 
-  - text: "Your pizza has been added."
+
+  product_add:
+  - text: "Pizza has been added."
